--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./Example/html-template/index.js"
+    "start": "nodemon ./Example/html-template/index.js",
+    "start:dev": "nodemon ./Example/express/server.js",
+    "start:prod": "SET NODE_ENV=production && nodemon ./Example/express/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   },
   "homepage": "https://github.com/karnkumar123/node-course#readme",
   "dependencies": {
+    "dotenv": "^12.0.4",
+    "express": "^4.17.2",
     "superagent": "^7.0.1"
   },
   "devDependencies": {
