--- a/config.env
+++ b/config.env
@@ -2,3 +2,12 @@ NODE_ENV=development
 PORT=3000
 USER=karan
 PASSWORD=123456
+
+DATABASE_LOCAL=mongodb://localhost:27017/book
+
+DATABASE_CLOUD_USERNAME=karnkumar
+DATABASE_CLOUD_PASSWORD=M2jcT4MaLlp5kfXK
+DATABASE_CLOUD_HOSTNAME=cluster0.o5lvd.mongodb.net
+DATABASE_CLOUD_DBNAME=book
+DATABASE_CLOUD=mongodb+srv://<DATABASE_CLOUD_USERNAME>:<DATABASE_CLOUD_PASSWORD>@<DATABASE_CLOUD_HOSTNAME>/<DATABASE_CLOUD_DBNAME>?retryWrites=true&w=majority
+
