--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
+    "mongoose": "^5.0.0",
     "superagent": "^7.0.1"
   },
   "devDependencies": {
